# Slimemaid

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  compile_commands.json  compile_shaders.sh  main.cpp
CMake/: FindSTBImage.cmake
cmake/: CppLint.cmake  FindTinyObjLoader.cmake  README.md
include/: ECSCombiner.hpp
include/components/: ComponentManager.hpp  ComponentType.hpp  IComponentArray.hpp
include/components/abs/: AbsRendererParams.hpp
include/components/renderer/: Frame.hpp  SmColorImage.hpp  SmCommandPool.hpp  SmDepthBuffers.hpp  SmDescriptorPool.hpp  SmDevice.hpp  SmDevices.hpp  SmFrame.hpp  SmGLFWWindow.hpp  SmGraphicsPipeline.hpp  SmInstance.hpp  SmModelResources.hpp  SmQueues.hpp  SmSamplingFlags.hpp  SmSurface.hpp  SmSwapChain.hpp  SmTextureBuffers.hpp  SmTextureImage.hpp  SmTextureImageViewSampler.hpp  SmUniformBufferObject.hpp  SmUniformBuffers.hpp  SmVertex.hpp  SmVulkanInstance.hpp  SwapChainSupportDetails.hpp  Vertex.hpp  Window.hpp
include/components/structs/: QueueFamilyIndices.hpp  UniformBufferObject.hpp
include/components/subs/: SubRendererParams.hpp
include/entities/: Entity.hpp  EntityManager.hpp  Signature.hpp
include/renderer/: allocator.hpp  consts.hpp  debug_messenger.hpp  glfw_handler.hpp  memory_handler.hpp  vulkan_instance_handler.hpp
include/renderer/structs/: queue_family_indices.hpp  swap_chain_support_details.hpp  vertex.hpp
include/systems/: SystemManager.hpp
include/systems/debug/: SmDebugSystem.hpp
include/systems/reader/: SmFileReaderSystem.hpp  SmFlieReaderSystem.hpp
include/systems/renderer/: GLFWWindowSystem.hpp  SmBuffersSystem.hpp  SmCommandsSystem.hpp  SmDepthBuffersSystem.hpp  SmDescriptorsSystem.hpp  SmDeviceSystem.hpp  SmFrameBufferSystem.hpp  SmGLFWWindowSystem.hpp  SmGrahicsMemorySystem.hpp  SmGraphicsMemorySystem.hpp  SmGraphicsPipelineSystem.hpp  SmImageViewSystem.hpp  SmModelLoaderSystem.hpp  SmQueueFamiliesSystem.hpp  SmSamplingFlagsSystem.hpp  SmShaderSystem.hpp  SmStencilSystem.hpp  SmSwapChainSystem.hpp  (+6 more)
libraries/spdlog/: CMakeLists.txt  logging.h
libraries/stb_image/: CMakeLists.txt
libraries/tinyobjloader/: CMakeLists.txt  tiny_obj_loader.h
misc/cpplint/: cpplint.py
raws/slime_green/: body.mtl  slime_model.blend
source/: ECSCombiner.hpp  main.cpp
source/components/: ComponentArray.cpp  ComponentArray.hpp  ComponentManager.cpp
source/entities/: EntityManager.cpp
source/renderer/: allocator.cpp  allocator.hpp  debug_messenger.hpp  glfw_handler.cpp  memory_handler.cpp  memory_handler.hpp  renderer.cpp  vulkan_instance_handler.cpp
source/systems/: System.hpp  SystemManager.cpp  SystemManager.hpp  SystemManagerSystem.cpp
(+50 files in other folders)
